--- a/Games/Puzzle/css/image-puzzle2.css
+++ b/Games/Puzzle/css/image-puzzle2.css
@@ -4,14 +4,6 @@
     height:1px;
 }
 
-#collage #playPanel {
-    background-color:#c2defc;
-    padding:10px 0px;
-    margin: 10px auto;
-    max-width:800px;
-    width:95%;
-}
-
 #collage #actualImageBox {
     display: inline-block;
     font-size:0.8em;
@@ -34,13 +26,13 @@
 }
 
 #collage img#actualImage{
-    border:2px solid #a46;
+    border: none;
     height:280px;
     width:280px;
 }
 
 #collage #sortable {
-    border:2px solid #a46;
+    border: none;
     list-style-type: none;
     display: inline-block;
     margin: 10px;
